@@ -39,11 +39,19 @@ Buttons[]=row_after
 Buttons[]=split_cells
 Buttons[]=merge_cells
 Buttons[]=|
+# Lets you see a popup with html markup
+# needs rewrite rules to allow html files in design folders if in virtualhost mode
 #Buttons[]=code
 Buttons[]=fullscreen
 Buttons[]=help
+#Buttons[]=disable
+#Buttons[]=|
+#Buttons[]=publish
+#Buttons[]=store
+#Buttons[]=discard
 
 # TinyMCE plugins you want to use
+# plugins not mentioned here isn't tested and therefor not supported togheter with Online Editor
 Plugins[]
 Plugins[]=safari
 Plugins[]=eztable
